NewCopadoPackage/main/default/objects/Account/fields/Developer_1__c.field-meta.xml
<CustomField>
    <fullName>Developer_1__c</fullName>
    <label>Developer 1</label>
    <length>11</length>
    <type>Text</type>
</CustomField>