NewCopadoPackage/main/default/objects/Account/fields/Is_true__c.field-meta.xml
<CustomField>
    <fullName>Is_true__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is true</label>
    <type>Checkbox</type>
</CustomField>