NewCopadoPackage/main/default/objects/Account/fields/Manual_Task_Dep__c.field-meta.xml
<CustomField>
    <fullName>Manual_Task_Dep__c</fullName>
    <label>Manual Task Dep</label>
    <length>18</length>
    <type>Text</type>
</CustomField>