NewCopadoPackage/main/default/objects/Account/fields/New_Field_2__c.field-meta.xml
<CustomField>
    <fullName>New_Field_2__c</fullName>
    <label>New Field 2</label>
    <length>18</length>
    <type>Text</type>
</CustomField>