NewCopadoPackage/main/default/objects/Account/fields/Recommit_1__c.field-meta.xml
<CustomField>
    <fullName>Recommit_1__c</fullName>
    <label>Recommit_1</label>
    <length>18</length>
    <type>Text</type>
</CustomField>