NewCopadoPackage/main/default/objects/Account/fields/Recommit_2__c.field-meta.xml
<CustomField>
    <fullName>Recommit_2__c</fullName>
    <label>Recommit_2</label>
    <length>18</length>
    <type>Text</type>
</CustomField>