NewCopadoPackage/main/default/objects/Account/fields/Snapshot_Diff__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Diff__c</fullName>
    <label>Snapshot Diff</label>
    <length>12</length>
    <type>Text</type>
</CustomField>