NewCopadoPackage/main/default/objects/Account/recordTypes/Person_Account_2.recordType-meta.xml
<RecordType>
    <fullName>Person_Account_2</fullName>
    <active>true</active>
    <label>Person Account 2</label>
</RecordType>